# vcc-classifier-jock

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  deploy.sh  pyproject.toml  vcc-able-Filter.md  vcc-ppt.md
app/: config.py  errors.py  main.py
app/prompts/: gamma_prompt.txt  vcc_filter.txt  vcc_ppt.txt
app/services/: categorizer.py  classifier.py  gamma.py  job_manager.py  llm.py
app/static/: index.html
